- Execution Observer facility implemented to give app an inside view
  of SNMP engine inner workings. This is thought to be a generic
  framework for viewing (and modifying) various internal states
  of pysnmp engine. Previously introduced non-standard APIs (like
  getting peer's transport endpoint which is not suggested in RFCs)
  will be gradually migrated to this new framework.
- Internal oneliner apps configuration cache moved from respective
  apps objects to [a singular] snmpEngine object. That would allow
  for better cache reuse and allow for a single app working with
  many snmpEngine instances.
- Legacy interfaces and APIs dropped in new oneliner AsyncCommandGenerator
  and AsyncNotificationOriginator classes (notice 'c' in Async). Original
  AsynCommandGenerator and AsynNotificationOriginator implementations
  rebuilt on top of these new optimized versions keeping all the legacy
  for compatibility reasons. These classes no more keep references to 
  SnmpEngine what makes them reusable with many SnmpEngine class instances.
- Built-in debugging is now based on Python logging module.
- Example on a single Transport Dispatcher use with multiple SnmpEngine's
  in oneliner AsyncCommandGenerator & AsyncNotificationOriginator based
  applicatons added.
- Example script on transport timeout & retries manipulation added.
- Example script explaining incoming message's communityName re-mapping added.
- Some more examples on MIB lookup and use at oneliner CommandGenerator added.
- Broadcast socket option can now be enabled with the .enableBroadcast()
  call for any datagram-based transport (namely, UDP and UDP6).
- AbstractTransportDispatcher's jobStarted() and jobFinished() methods
  now accept optional 'count' parameter which is a way for an app to indicate
  how many responses are expected or have been processed in bulk.
- Example script on SNMP Agents UDP broadcast-based discovery added.
- Oneliner transport object now supports setLocalAddress() method to