@@ -23,6 +23,7 @@ Randy Couey
 Brian Kyckelhahn
 Mark M Evans
 Filippo Giunchedi at Truelite Srl
-
+Matt Hooks
+Zachary Lorusso
 Thanks to Python Software Foundation for granting financial support 
 for the project.
