@@ -1,0 +1,63 @@
+#
+# Copyright (C) 2014, Zebra Technologies
+# Authors: Matt Hooks <me@matthooks.com>
+#          Zachary Lorusso <zlorusso@gmail.com>
+#
+# Redistribution and use in source and binary forms, with or without 
+# modification, are permitted provided that the following conditions are met:
+#
+# * Redistributions of source code must retain the above copyright notice,
+#   this list of conditions and the following disclaimer.
+#
+# * Redistributions in binary form must reproduce the above copyright
+#   notice, this list of conditions and the following disclaimer in the 
+#   documentation and/or other materials provided with the distribution.
+#
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE 
+# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE 
+# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+# BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR 
+# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF 
+# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS 
+# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
+# IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) 
+# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF 
+# THE POSSIBILITY OF SUCH DAMAGE.
+#
+from pysnmp.carrier.asyncio.dgram.base import DgramAsyncioProtocol
+from pysnmp.carrier import error
+try:
+    import asyncio
+except ImportError:
+    from pysnmp.error import PySnmpError
+    raise PySnmpError('The asyncio transport is not available')
+
+loop = asyncio.get_event_loop()
+
+domainName = snmpUDPDomain = (1, 3, 6, 1, 6, 1, 1)
+
+class UdpAsyncioTransport(DgramAsyncioProtocol):
+    # AbstractAsyncioTransport API
+
+    def openClientMode(self, iface=('0.0.0.0', 0)):
+        try:
+            c = loop.create_datagram_endpoint(lambda: self, local_addr=iface)
+            self._lport = asyncio.async(c)
+        except Exception as err:
+            raise error.CarrierError() from err
+        return self
+
+    def openServerMode(self, iface=('0.0.0.0', 161)):
+        try:
+            c = loop.create_datagram_endpoint(lambda: self, local_addr=iface)
+            self._lport = asyncio.async(c)
+        except Exception as err:
+            raise error.CarrierError() from err
+        return self
+
+    def closeTransport(self):
+        self._lport.cancel()
+        DgramAsyncioProtocol.closeTransport(self)
+
+UdpTransport = UdpAsyncioTransport
