@@ -98,10 +98,13 @@ params.update( {
                   'pysnmp.carrier.asynsock.dgram',
                   'pysnmp.carrier.twisted',
                   'pysnmp.carrier.twisted.dgram',                   
+                  'pysnmp.carrier.asyncio',
+                  'pysnmp.carrier.asyncio.dgram',                   
                   'pysnmp.entity',
                   'pysnmp.entity.rfc3413',
                   'pysnmp.entity.rfc3413.oneliner',
                   'pysnmp.entity.rfc3413.twisted',
+                  'pysnmp.entity.rfc3413.asyncio',
                   'pysnmp.proto',
                   'pysnmp.proto.mpmod',
                   'pysnmp.proto.secmod',
